# seq_chess_probe

./: .gitignore  README.md  imports.py  pixi.toml  pyproject.toml
.ipynb_checkpoints/: imports-checkpoint.py
data/: chessPgn.py  chessSeq.py  fenEval.py  lichessSeq.py  lichessSquare.py  pgnSeq.py  pgnSkill.py  pgnSquare.py
eval/: play.py
extras/: train.py
lib/: chess.py  data.py  dfs.py  infer.py  metrics.py  modules.py  optim.py  train.py  utils.py  wandb.py
lib/datasets/: datasets.py
models/: linear_probe.py  nanoGPT.py  nanoGPT_ViT.py  nanoRWKV.py  nanoRWKV_ViT.py
nb/: eval.ipynb  fen_eval.ipynb  fen_eval_data.ipynb  inter.ipynb  lichess_data.ipynb  pgn.ipynb  pgn_cont.ipynb  play.ipynb  seq.ipynb
nb/.ipynb_checkpoints/: fen_eval-checkpoint.ipynb  inter-checkpoint.ipynb  lichess-checkpoint.ipynb  pgn-checkpoint.ipynb
resources/binned/: check_errs.zsh  script.zsh
resources/chess/: README.md
resources/chess/megadb/: split.py
resources/eval/: README.md
resources/lichess_elite/: README.md
resources/synthetic/: README.md
