[project]
name = "A3"
version = "0.1.0"
requires-python = ">=3.9"
# pip
dependencies = [ "torcheval>=0.0.7,<0.0.8"]


[tool.pixi.environments]
# test = {features = ["test"], solve-group = "default"}
# docs = {features = ["docs"], solve-group = "default"}
default = {features = [], solve-group = "default"}
dev = {features = ["dev"], solve-group = "default"}

# Doesn't work
# [dependency-groups]
# test = ["pytest"]
# dev = [{include-group = "test"}]
[tool.pixi.feature.dev.dependencies]
pytest = "*"
jupyter-ai = { version = ">=2.28.2,<3", channel = "conda-forge" }
langchain-openai = { version = ">=0.1.25,<0.2", channel = "conda-forge" }

[tool.pixi.project]
channels = ["conda-forge", "huggingface"]
platforms = ["linux-64"]
authors = ["Richard Zhang <ry7zhang@uwaterloo.ca>"]

[tool.pixi.dependencies]
# Model
pytorch = "*"
torchvision = "*"
torchaudio = "*"

# Data
polars = "*"

# Training
wandb = "*"

# Docs
jupyter = "*"
pip = "*"
ipympl = "*"

plotly = "*"
tqdm = "*"
seaborn = ">=0.13.2,<0.14"
scikit-learn = ">=1.5.2,<2"
openpyxl = ">=3.1.5,<4"
fastexcel = ">=0.12.0,<0.13"
pandas = ">=2.2.3,<3"
skorch = ">=1.0.0,<2"
chess = ">=1.11.0,<2"
datasets = { version = ">=3.2.0,<4", channel = "huggingface" }
questionary = ">=2.0.1,<3"
jupyter_console = ">=6.6.3,<7"


[tool.pixi.system-requirements]
cuda = "12.6"

# pixi run -e test pytest
[tool.pixi.feature.dev.tasks]
test = "pytest --doctest-modules"

[tool.pixi.tasks]
nb = "jupyter notebook" # --notebook-dir doesn't work

[tool.ruff.lint]
ignore = ["F403", "F405", "F401", "E741"]

[tool.pytest]
addopts          = ['--doctest-modules', '--doctest-report', 'ndiff']
doctest_optionflags= ['NORMALIZE_WHITESPACE', 'ELLIPSIS']
