[project]
name = "A3"
version = "0.1.0"
requires-python = ">=3.9"
# pip
dependencies = [ "torcheval>=0.0.7,<0.0.8", "torch-nibs = *" ]

[tool.ruff.lint]
ignore = ["F403", "F405", "F401", "E741"]

[tool.pytest]
addopts          = ['--doctest-modules', '--doctest-report', 'ndiff']
doctest_optionflags= ['NORMALIZE_WHITESPACE', 'ELLIPSIS']